fixed helpbox width on small screens

--- a/app/static/sass/ringing_room.scss
+++ b/app/static/sass/ringing_room.scss
@@ -128,7 +128,6 @@ hr {
 .help {
     margin-left: 1.5rem;
     margin-right: 1.5rem;
-    width: 100%;
 }
 
 
